fixed the alignment

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,8 @@ body {
   width: 1000px;
   height: 450px;
   color: white;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h1 {
@@ -89,7 +91,7 @@ h4 {
 }
 
 .guide {
-  width: 1000px;
+  width: 100%;
 }
 
 .avatar {
@@ -99,7 +101,7 @@ h4 {
 
 .card {
   width: 500px;
-  margin: 90px auto;
+  margin: 100px auto;
   padding: 70px 30px;
   display: flex;
   justify-content: center;
@@ -109,5 +111,4 @@ h4 {
   box-shadow: 0 8px #1d3557;
   border-radius: 10px;
   gap: 20px;
-  box-sizing: border-box;
 }
